// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimelinePosts - Snapshots > should match snapshot for empty state 1`] = `
<div>
  <div
    data-testid="timeline-empty"
  >
    No posts
  </div>
</div>
`;

exports[`TimelinePosts - Snapshots > should match snapshot for error state 1`] = `
<div>
  <div
    data-testid="timeline-initial-error"
  >
    Error: 
    Network error
  </div>
</div>
`;

exports[`TimelinePosts - Snapshots > should match snapshot for loading state 1`] = `
<div>
  <div
    data-testid="timeline-loading"
  >
    Loading...
  </div>
</div>
`;
